[project]
name = "llm-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.8",
    "faker>=40.11.1",
    "gradio==5.49.1",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "ipywidgets>=8.1.8",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn==0.38.0",
]
